--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "apla-responder",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Helper module to build Alexa APLA Documents in handlers, in Node programmatically.",
   "main": "build/index.js",
   "types": "build/index.d.ts",
-  "repository": "https://fx-adr@github.com/fx-adr/apla-responder.git",
+  "repository": "https://github.com/kun432/apla-responder.git",
   "homepage": "https://www.notion.so/APLA-Responder-7b524f8bb1be4696bfb45364d91aa310",
   "author": "Adam Rann <adam@fxdigital.uk>",
   "license": "MIT",
